--- a/src/ionic.css
+++ b/src/ionic.css
@@ -179,10 +179,12 @@ ion-app ion-header {
   }
 }
 
-.ion-page {
+ion-app > .ion-page {
   max-width: 640px;
   margin: auto;
+  top: env(safe-area-inset-top);
 }
+
 
 ion-tab-bar {
   border-top: 1px solid var(--dark20);
